...
            child: Text(
              'Tiệc ích',
              style: TextStyle(fontSize: 18, fontWeight: FontWeight.bold),
            ),
          ),
          InkWell(
            key: Key('HoSoCaNhan'),
            onTap: () {
              Navigator.push(
                context,
                MaterialPageRoute(
                  builder: ((context) {
                    return const ProfileScreenDetail();
...
